docs: add quick repository link to submission page for convenience

--- a/submission.html
+++ b/submission.html
@@ -116,6 +116,11 @@
         <li>Zip the entire <code>INF6420-Projects</code> folder and submit the ZIP, OR publish via GitHub Pages if allowed.</li>
       </ol>
     </section>
+
+    <section class="card">
+      <h2>Repository</h2>
+      <p><a href="https://github.com/katierock01/inf6420-projects" target="_blank" rel="noopener">View source on GitHub</a></p>
+    </section>
   </main>
 
   <script>
