--- a/rock-INF6420-index.html
+++ b/rock-INF6420-index.html
@@ -8,7 +8,7 @@
         * { box-sizing: border-box; }
         body {
             font-family: Arial, Helvetica, sans-serif;
-            font-size: 12px;
+            font-size: 11px;
             margin: 0;
             padding: 0;
             background: #fff;
@@ -17,40 +17,40 @@
         }
         .profile-photo {
             display: block;
-            margin: 18px auto 10px auto;
-            border-radius: 12px;
-            max-width: 180px;
+            margin: 12px auto 8px auto;
+            border-radius: 8px;
+            max-width: 120px;
             width: 100%;
             height: auto;
-            box-shadow: 0 4px 16px rgba(0,0,0,0.12);
-            border: 3px solid #e0e0e0;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            border: 2px solid #e0e0e0;
             background: #fff;
-            padding: 10px;
+            padding: 6px;
         }
         main {
-            width: 95%;
-            max-width: 800px;
-            margin: 24px auto;
-            padding: 22px;
+            width: 94%;
+            max-width: 640px;
+            margin: 16px auto;
+            padding: 14px;
             background: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.06);
         }
         h1, h2, h3 {
             color: #006633;
             font-family: Arial, Helvetica, sans-serif;
         }
         h1 {
-            font-size: 1.5em;
-            margin-bottom: 0.2em;
+            font-size: 1.2em;
+            margin-bottom: 0.15em;
         }
         h2 {
-            font-size: 1.15em;
-            margin-bottom: 0.2em;
+            font-size: 1.0em;
+            margin-bottom: 0.15em;
         }
         h3 {
-            font-size: 1.05em;
-            margin-top: 1em;
+            font-size: 0.92em;
+            margin-top: 0.7em;
         }
         p, label, input, select, textarea {
             font-size: 1em;
@@ -58,7 +58,7 @@
         header {
             background: #006633;
             color: #ffffff;
-            padding: 20px;
+            padding: 12px;
             text-align: center;
         }
         header h1, header h2 {
@@ -67,39 +67,46 @@
             max-width: 800px;
         }
         footer {
-            font-size: 0.9em;
+            font-size: 0.85em;
             color: #555;
             background: #f8f9fa;
             border-top: 1px solid #eee;
-            padding: 10px;
+            padding: 8px;
             text-align: center;
         }
         /* Form Styles */
-        .projects-section { background: #f8f9fa; padding: 20px; border-radius: 6px; margin-top: 25px; }
+        .projects-section { background: #f8f9fa; padding: 12px; border-radius: 6px; margin-top: 16px; }
         .projects-section h3 { margin-top: 0; }
-        .project-link { display: inline-block; background: #006633; color: white; padding: 10px 18px; text-decoration: none; border-radius: 5px; margin: 10px 10px 10px 0; transition: background 0.3s; }
+        .project-link { display: inline-block; background: #006633; color: white; padding: 7px 12px; text-decoration: none; border-radius: 4px; margin: 6px 8px 6px 0; transition: background 0.3s; font-size: 0.92em; }
         .project-link:hover { background: #004d26; }
-        .feedback-form { background: #f0fdf4; padding: 20px; border-radius: 6px; margin-top: 25px; }
-        fieldset { border: 2px solid #006633; border-radius: 6px; padding: 15px; margin: 15px 0; background: white; }
-        legend { color: #006633; font-weight: bold; padding: 0 10px; }
-        label { display: block; margin: 7px 0 4px; font-weight: 500; font-size: 1em; }
+        .feedback-form { background: #f0fdf4; padding: 12px; border-radius: 6px; margin-top: 16px; }
+        fieldset { border: 1px solid #006633; border-radius: 6px; padding: 10px; margin: 10px 0; background: white; }
+        legend { color: #006633; font-weight: bold; padding: 0 8px; font-size: 0.9em; }
+        label { display: block; margin: 6px 0 3px; font-weight: 500; font-size: 0.9em; }
         input[type="text"], input[type="email"], select, textarea {
             width: 100%;
-            padding: 10px;
+            padding: 6px;
             border: 1px solid #ccc;
-            border-radius: 6px;
-            margin-bottom: 10px;
+            border-radius: 4px;
+            margin-bottom: 8px;
             box-sizing: border-box;
-            font-size: 1.08em;
+            font-size: 0.92em;
         }
         textarea {
-            min-height: 90px;
+            min-height: 64px;
             resize: vertical;
         }
-        input[type="radio"], input[type="checkbox"] { margin-right: 5px; }
-        .radio-group, .checkbox-group { margin: 10px 0; }
-        input[type="submit"] { background: #006633; color: white; padding: 7px 18px; border: none; border-radius: 5px; cursor: pointer; font-size: 1em; margin-top: 8px; }
+        input[type="radio"], input[type="checkbox"] { margin-right: 4px; }
+        .radio-group, .checkbox-group { margin: 8px 0; }
+        input[type="submit"] { background: #006633; color: white; padding: 6px 12px; border: none; border-radius: 4px; cursor: pointer; font-size: 0.92em; margin-top: 6px; }
         input[type="submit"]:hover { background: #004d26; }
+
+        /* Small-screen tweaks */
+        @media (max-width: 520px) {
+            .profile-photo { max-width: 100px; }
+            main { max-width: 92%; padding: 12px; }
+            header { padding: 10px; }
+        }
     </style>
 </head>
 <body>
