Replace Project 2.3 with Project 3; update validators and deployment scripts

--- a/index.html
+++ b/index.html
@@ -194,6 +194,18 @@
           </div>
         </a>
       </article>
+
+      <article class="card" role="listitem">
+        <a href="project3/index.html">
+          <div class="card-header">
+            <h3>Project 3</h3>
+          </div>
+          <div class="card-body">
+            <p>Interactive squirrels website with multi-page navigation, PHP form handler, and shared CSS.</p>
+            <p class="meta">Source: project3/index.html</p>
+          </div>
+        </a>
+      </article>
     </div>
   </section>
 
