--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       object-fit: cover; object-position: center;
       border: 3px solid #fff; box-shadow: 0 4px 10px rgba(0,0,0,0.12);
       background: #f0f0f0;
+      display: block;
     }
   .intro h2 { margin: 0 0 4px; font-size: 1.25rem; color: var(--primary-accent); }
     .intro p { margin: 0; color: var(--muted); }
