--- a/project2.2/rock-project2-2.html
+++ b/project2.2/rock-project2-2.html
@@ -8,15 +8,15 @@
   <style>
     /* Internal CSS Styling */
     :root {
-      /* EmpathTech palette - consolidated variables */
-      --primary-color: #083B55;
-      --accent-color: #FF6B63;
-      --background-color: #E8F2F7;
+      /* WSU Green palette - updated per requirements */
+      --primary-color: #115740;
+      --accent-color: #1a6e52;
+      --background-color: #f7faf7;
       --heading-font: 'Montserrat', Arial, sans-serif;
       --body-font: 'Open Sans', Arial, sans-serif;
-      --text-color: #414B5C;
+      --text-color: #222;
       --overlay-bg: rgba(255, 255, 255, 0.96);
-      --link-hover: #FF5048;
+      --link-hover: #0d4230;
     }
     * {
       box-sizing: border-box;
