Unify all projects with EmpathTech color palette
- Updated Project 1.1, 2.2, index, submission, overview to #083B55/#FF6B63/#E8F2F7
- Maintained Project 3 existing EmpathTech colors
- Ensured consistent branding across entire site

--- a/overview.html
+++ b/overview.html
@@ -8,11 +8,11 @@
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   <style>
     :root {
-      --wsu-green: #115740;
-      --wsu-green-light: #1a6e52;
-      --wsu-green-dark: #0d4230;
+      --wsu-green: #083B55;
+      --wsu-green-light: #0D5A7F;
+      --wsu-green-dark: #062A3D;
       --accent: #FF6B63;
-      --bg: #f7faf7;
+      --bg: #E8F2F7;
       --card-bg: #ffffff;
       --text: #222;
       --muted: #5a5a5a;
@@ -26,8 +26,8 @@
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       color: var(--text);
       background:
-        radial-gradient(1000px 400px at -10% -20%, rgba(17, 87, 64, 0.08) 0%, transparent 60%),
-        radial-gradient(800px 300px at 110% -10%, rgba(26, 110, 82, 0.08) 0%, transparent 60%),
+        radial-gradient(1000px 400px at -10% -20%, rgba(8, 59, 85, 0.08) 0%, transparent 60%),
+        radial-gradient(800px 300px at 110% -10%, rgba(8, 59, 85, 0.08) 0%, transparent 60%),
         var(--bg);
     }
     .topbar {
@@ -86,7 +86,7 @@
       box-shadow: var(--shadow);
       padding: 24px;
       margin-bottom: 24px;
-      border-left: 5px solid var(--wsu-green);
+      border-left: 5px solid #083B55;
     }
     .project-section h2 {
       margin: 0 0 8px;
@@ -107,8 +107,8 @@
       font-family: Georgia, "Times New Roman", Times, serif;
     }
     .requirements-list {
-      background: rgba(17, 87, 64, 0.05);
-      border-left: 3px solid var(--wsu-green-light);
+      background: rgba(8, 59, 85, 0.05);
+      border-left: 3px solid #0D5A7F;
       padding: 12px 16px;
       margin: 12px 0;
       border-radius: 6px;
@@ -148,22 +148,22 @@
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
     .btn-primary {
-      background: var(--wsu-green);
+      background: #083B55;
       color: white;
-      box-shadow: 0 2px 8px rgba(17, 87, 64, 0.3);
+      box-shadow: 0 2px 8px rgba(8, 59, 85, 0.3);
     }
     .btn-primary:hover {
-      background: var(--wsu-green-dark);
+      background: #062A3D;
       transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(17, 87, 64, 0.4);
+      box-shadow: 0 4px 12px rgba(8, 59, 85, 0.4);
     }
     .btn-secondary {
       background: white;
-      color: var(--wsu-green);
-      border: 2px solid var(--wsu-green-light);
+      color: #083B55;
+      border: 2px solid #0D5A7F;
     }
     .btn-secondary:hover {
-      background: rgba(17, 87, 64, 0.08);
+      background: rgba(8, 59, 85, 0.08);
       transform: translateY(-2px);
     }
     .status-badge {
@@ -188,15 +188,15 @@
       color: var(--muted);
       font-size: 0.9rem;
       padding: 26px 16px 40px;
-      border-top: 1px solid rgba(17, 87, 64, 0.25);
+      border-top: 1px solid rgba(8, 59, 85, 0.25);
       margin-top: 40px;
     }
     .pill {
       display: inline-block;
       padding: 4px 12px;
       border-radius: 999px;
-      background: rgba(17, 87, 64, 0.15);
-      color: var(--wsu-green);
+      background: rgba(8, 59, 85, 0.15);
+      color: #083B55;
       font-weight: 700;
       font-size: 0.8rem;
       text-transform: uppercase;
