--- a/rock-Project1.1/rock-Project1.1.index.html
+++ b/rock-Project1.1/rock-Project1.1.index.html
@@ -14,7 +14,7 @@
             line-height: 1.6;
         }
         header {
-            background-color: #115740;
+            background-color: #083B55;
             color: white;
             text-align: center;
             padding: 30px 15px;
@@ -37,7 +37,7 @@
             box-shadow: 0 6px 12px rgba(0,0,0,0.1);
         }
         h3 {
-            color: #115740;
+            color: #083B55;
             margin-top: 1.5em;
         }
         img {
@@ -63,7 +63,7 @@
         <h2>Katie Rock – Submission includes Project 2.1 (download below)</h2>
     </header>
     <nav aria-label="Breadcrumb" style="max-width:800px; margin: 12px auto 0; padding: 0 25px;">
-        <a href="../index.html" style="color:#115740; text-decoration:none;">&larr; Back to Projects</a>
+        <a href="../index.html" style="color:#083B55; text-decoration:none;">&larr; Back to Projects</a>
     </nav>
 
     <main>
@@ -76,7 +76,7 @@
         <p>
             <!-- Per Project 2.1 rubric: Project 1 must link to the Project 2.1 Word document -->
             <a href="../rock-Project2.1/rock-project2.1.docx"
-               style="color:#115740; font-weight:600; text-decoration:none; border:1px solid #cfe8d8; padding:8px 10px; border-radius:8px; background:#f0fbf5; display:inline-block"
+               style="color:#083B55; font-weight:600; text-decoration:none; border:1px solid #d0e4ed; padding:8px 10px; border-radius:8px; background:#E8F2F7; display:inline-block"
                title="Download the updated Project 2.1 Word document">
                Project 2.1 – Download (Updated DOCX)
             </a>
@@ -84,7 +84,7 @@
         <p>
             <!-- Per Project 2.2 rubric: Project 1 must link to Project 2.2 HTML page -->
             <a href="../project2.2/rock-project2-2.html"
-               style="color:#115740; font-weight:600; text-decoration:none; border:1px solid #cfe8d8; padding:8px 10px; border-radius:8px; background:#f0fbf5; display:inline-block"
+               style="color:#083B55; font-weight:600; text-decoration:none; border:1px solid #d0e4ed; padding:8px 10px; border-radius:8px; background:#E8F2F7; display:inline-block"
                title="View Project 2.2 HTML version with styled content">
                Project 2.2 – HTML Version (Styled)
             </a>
