--- a/submission.html
+++ b/submission.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="styles/brand.css?v=et1" />
   <style>
     :root {
-      --muted:#5a5a5a; --bg:#f7faf7; --card:#fff; --shadow:0 8px 20px rgba(0,0,0,.08);
-      /* WSU green overrides to stay consistent across site */
-      --primary-accent: #115740; --link-color: #1a6e52; --link-hover: #0d4230;
+      --muted:#5a5a5a; --bg:#E8F2F7; --card:#fff; --shadow:0 8px 20px rgba(0,0,0,.08);
+      /* EmpathTech colors to stay consistent across site */
+      --primary-accent: #083B55; --link-color: #083B55; --link-hover: #FF6B63;
     }
     body{margin:0;font-family:"Segoe UI",Tahoma,Geneva,Verdana,sans-serif;background:var(--bg);color:#222}
-    header{background:linear-gradient(135deg,var(--primary-accent), #1a6e52);color:#fff;padding:36px 18px 24px;text-align:center}
+    header{background:linear-gradient(135deg,var(--primary-accent), #0D5A7F);color:#fff;padding:36px 18px 24px;text-align:center}
     header h1{margin:0;font-size:1.8rem}
     header p{margin:8px 0 0;color:#e9ffef}
     .container{max-width:900px;margin:20px auto;padding:0 16px 40px}
