--- a/rock-INF6420-index.html
+++ b/rock-INF6420-index.html
@@ -18,14 +18,15 @@
         .profile-photo {
             display: block;
             margin: 10px auto 8px auto;
-            border-radius: 8px;
+            border-radius: 50%; /* Oval/circular frame */
             max-width: 100px;
-            width: 100%;
-            height: auto;
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            border: 2px solid #e0e0e0;
+            border: 3px solid #083B55;
             background: #fff;
-            padding: 5px;
+            padding: 3px;
         }
         main {
             width: 94%;
@@ -117,7 +118,7 @@
     </header>
     <main>
         <!-- Your image -->
-        <img src="img/myphoto.jpeg" alt="Photo of Katie Rock" class="profile-photo">
+        <img src="myphoto.jpeg" alt="Photo of Katie Rock" class="profile-photo" onerror="this.src='https://via.placeholder.com/100x100?text=Photo'">
         <h3>About Me</h3>
         <p>Hello! My name is <strong>Katie Rock</strong>, and I'm a graduate student in the <em>Information Sciences program at Wayne State University</em>. This page was built as part of Project 1 to demonstrate basic web publishing skills. Learn more about the program at the <a href="https://wayne.edu/sis" target="_blank" rel="noopener">School of Information Sciences</a>.</p>
         <h3>Interests</h3>
@@ -126,9 +127,11 @@
         <div class="projects-section">
             <h3>My Projects</h3>
             <p>Explore my course projects:</p>
-            <a href="inf6420-projects/rock-Project1.1/rock-Project1.1.index.html" class="project-link" target="_blank">Project 2.1: Personal Page</a>
-            <a href="inf6420-projects/project2.2/rock-project2-2.html" class="project-link" target="_blank">Project 2.2: HTML Conversion</a>
-            <a href="inf6420-projects/project3/home.html" class="project-link" target="_blank">Project 3: Squirrels Website</a>
+            <a href="#" class="project-link">Project 2.1 (Coming soon)</a>
+            <a href="#" class="project-link">Project 2.2 (Coming soon)</a>
+            <a href="#" class="project-link">Project 3 (Coming soon)</a>
+            <a href="#" class="project-link">Project 4 (Coming soon)</a>
+            <a href="#" class="project-link">Project 5 - Final (Coming soon)</a>
         </div>
         <!-- Feedback Form -->
         <div class="feedback-form">
