--- a/rock-INF6420-index.html
+++ b/rock-INF6420-index.html
@@ -127,9 +127,9 @@
         <div class="projects-section">
             <h3>My Projects</h3>
             <p>Explore my course projects:</p>
-            <a href="#" class="project-link">Project 2.1 (Coming soon)</a>
-            <a href="#" class="project-link">Project 2.2 (Coming soon)</a>
-            <a href="#" class="project-link">Project 3 (Coming soon)</a>
+            <a href="rock-project2.1.docx" class="project-link">Project 2.1 - AI & Web Accessibility Research</a>
+            <a href="project2.2/rock-project2-2.html" class="project-link">Project 2.2 - HTML/CSS Conversion</a>
+            <a href="project3/index.html" class="project-link">Project 3 - Squirrels Website</a>
             <a href="#" class="project-link">Project 4 (Coming soon)</a>
             <a href="#" class="project-link">Project 5 - Final (Coming soon)</a>
         </div>
