--- a/rock-INF6420-index.html
+++ b/rock-INF6420-index.html
@@ -129,7 +129,7 @@
             <p>Explore my course projects:</p>
             <a href="rock-project2.1.docx" class="project-link">Project 2.1 - AI & Web Accessibility Research</a>
             <a href="project2.2/rock-project2-2.html" class="project-link">Project 2.2 - HTML/CSS Conversion</a>
-            <a href="project3/index.html" class="project-link">Project 3 - Squirrels Website</a>
+            <a href="project3/home.html" class="project-link">Project 3 - Squirrels Website</a>
             <a href="#" class="project-link">Project 4 (Coming soon)</a>
             <a href="#" class="project-link">Project 5 - Final (Coming soon)</a>
         </div>
