--- a/rock-INF6420-index.html
+++ b/rock-INF6420-index.html
@@ -123,6 +123,18 @@
         <p>Hello! My name is <strong>Katie Rock</strong>, and I'm a graduate student in the <em>Information Sciences program at Wayne State University</em>. This page was built as part of Project 1 to demonstrate basic web publishing skills. Learn more about the program at the <a href="https://wayne.edu/sis" target="_blank" rel="noopener">School of Information Sciences</a>.</p>
         <h3>Interests</h3>
         <p>I'm passionate about combining <strong>information management, social impact, and technology</strong>. In particular, I explore how data and AI can be used to drive innovation, advocacy, and social change.</p>
+        
+        <!-- Self-Introduction Video -->
+        <div style="background: #E8F2F7; padding: 12px; border-radius: 6px; margin: 14px 0; text-align: center;">
+            <h3 style="margin-top: 0;">Introduction Video</h3>
+            <video controls width="100%" style="max-width: 480px; border-radius: 6px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+                <source src="intro-video.mp4" type="video/mp4">
+                <source src="intro-video.webm" type="video/webm">
+                Your browser does not support the video tag. Please use a modern browser to view this content.
+            </video>
+            <p style="font-size: 0.85em; color: #555; margin-top: 8px;">Watch my self-introduction video to learn more about me!</p>
+        </div>
+        
         <!-- Projects Section -->
         <div class="projects-section">
             <h3>My Projects</h3>
@@ -130,7 +142,7 @@
             <a href="rock-project2.1.docx" class="project-link">Project 2.1 - AI & Web Accessibility Research</a>
             <a href="project2.2/rock-project2-2.html" class="project-link">Project 2.2 - HTML/CSS Conversion</a>
             <a href="project3/home.html" class="project-link">Project 3 - Squirrels Website</a>
-            <a href="#" class="project-link">Project 4 (Coming soon)</a>
+            <a href="project4/home.html" class="project-link">Project 4 - Responsive Design</a>
             <a href="#" class="project-link">Project 5 - Final (Coming soon)</a>
         </div>
         <!-- Feedback Form -->
