--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Katie Rock – INF 6420 Projects</title>
-  <meta name="description" content="Portfolio index for INF 6420 course projects by Katie Rock." />
-  <link rel="icon" href="favicon.svg" type="image/svg+xml" />
-  <link rel="stylesheet" href="styles/brand.css?v=et1" />
+  <meta name="description" content="Portfolio index for INF 6420 course projects by Katie Rock.">
+  <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="styles/brand.css?v=et1">
   <style>
     :root {
       /* WSU green overrides for better contrast and compatibility */
@@ -119,7 +119,7 @@
 <body>
   <div class="topbar">
     <div style="display:flex; align-items:center; gap:10px;">
-  <img src="images/logo-icon.svg" alt="Katie Rock logo" style="height:28px; width:auto" />
+  <img src="images/logo-icon.svg" alt="Katie Rock logo" style="height:28px; width:auto">
   <span class="brand">Katie Rock, LLMSW</span>
     </div>
     <nav class="nav" aria-label="Primary">
@@ -139,7 +139,7 @@
   <section class="container">
 
     <div class="intro" role="complementary">
-      <img class="avatar" src="project2.1/docs/myphoto.jpeg" alt="Portrait of Katie Rock" onerror="this.style.display='none'" />
+      <img class="avatar" src="images/myphoto.jpeg" alt="Portrait of Katie Rock" onerror="this.style.display='none'">
       <div>
   <h2>Katie Rock, LLMSW</h2>
         <p>Graduate student, Wayne State University · Information Sciences</p>
@@ -149,7 +149,7 @@
     <section style="margin: 24px 0 32px; max-width: 860px; background: #fffbe7; border: 1px solid #ffe69c; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.06); padding: 18px 18px 10px;">
       <h2 style="margin-top:0; color: var(--primary-accent); font-size:1.2rem;">Video Presentation</h2>
       <div style="display:flex; flex-wrap:wrap; gap:18px; align-items:center;">
-        <iframe width="357" height="200" src="https://www.youtube.com/embed/uXbkobcG5JU" title="August 31, 2025" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.08);"></iframe>
+        <iframe width="357" height="200" src="https://www.youtube.com/embed/uXbkobcG5JU" title="August 31, 2025" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.08); border:0;"></iframe>
         <div style="flex:1; min-width:180px;">
           <p style="margin:0 0 6px;">Watch my course video introduction. If the video does not load, <a href="https://www.youtube.com/watch?v=uXbkobcG5JU" target="_blank" rel="noopener">view it on YouTube</a>.</p>
         </div>
@@ -158,61 +158,62 @@
 
     <div class="grid" role="list">
       <article class="card" role="listitem">
-        <a href="project1.1/index.html">
+        <a href="rock-INF6420-index.html">
           <div class="card-header">
             <h3>Project 1.1</h3>
           </div>
           <div class="card-body">
             <p>Personal intro page with basic HTML/CSS skills.</p>
-            <p class="meta">Source: project1.1/index.html</p>
+            <p class="meta">Source: rock-INF6420-index.html</p>
           </div>
         </a>
       </article>
 
       <article class="card" role="listitem">
-        <a href="project2.1/index.html">
+        <a href="inf6420-projects/rock-project2.1.docx">
           <div class="card-header">
-            <h3>Project 2.1</h3>
+            <h3>Project 2.1 — DOCX (download)</h3>
           </div>
           <div class="card-body">
-            <p>HTML page linking to the Project 2.1 deliverable (Word document).</p>
-            <p class="meta">Source: project2.1/index.html</p>
+            <p>Direct link to the Project 2.1 deliverable (Word document).</p>
+            <p class="meta">Source: inf6420-projects/rock-project2.1.docx</p>
+            <p class="meta" style="margin-top:4px">Note: This opens/downloads a DOCX file. On HTTP, your browser may prompt; choose "Keep" to proceed.</p>
           </div>
         </a>
       </article>
 
       <article class="card" role="listitem">
-        <a href="project2.2/index.html">
+        <a href="inf6420-projects/rock-project2-2.html">
           <div class="card-header">
             <h3>Project 2.2</h3>
           </div>
           <div class="card-body">
             <p>Converted HTML page with internal CSS, tables, styled lists, and validation links.</p>
-            <p class="meta">Source: project2.2/index.html</p>
-          </div>
-        </a>
-      </article>
-
-      <article class="card" role="listitem" aria-label="Project 2.3 coming soon">
-        <a href="rock-Project2.3/index.html">
-          <div class="card-header">
-            <h3>Project 2.3 <span class="pill" style="margin-left:8px">Coming Soon</span></h3>
-          </div>
-          <div class="card-body">
-            <p>Placeholder page to avoid 404s while I build this assignment.</p>
-            <p class="meta">Target: rock-Project2.3/index.html</p>
+            <p class="meta">Source: inf6420-projects/rock-project2-2.html</p>
           </div>
         </a>
       </article>
 
       <article class="card" role="listitem">
-        <a href="project3/home.html">
+        <a href="inf6420-projects/project3/home.html">
           <div class="card-header">
             <h3>Project 3</h3>
           </div>
           <div class="card-body">
-            <p>Squirrels of Michigan website with navigation, form submission, and external CSS.</p>
-            <p class="meta">Source: project3/home.html</p>
+            <p>Multi-page website with forms, images, and CSS styling.</p>
+            <p class="meta">Source: inf6420-projects/project3/home.html</p>
+          </div>
+        </a>
+      </article>
+
+      <article class="card" role="listitem">
+        <a href="inf6420-projects/project4/home.html">
+          <div class="card-header">
+            <h3>Project 4</h3>
+          </div>
+          <div class="card-body">
+            <p>Responsive redesign of Project 3 with mobile-first CSS.</p>
+            <p class="meta">Source: inf6420-projects/project4/home.html</p>
           </div>
         </a>
       </article>
@@ -222,7 +223,7 @@
   <footer>
     <span class="pill">INF 6420</span>
     <div style="margin-top:8px">&copy; 2025 Katie Rock</div>
-    <div style="margin-top:6px"><a style="color:var(--primary-accent); text-decoration:none" href="docs/index.html">Assignment Docs</a> · <a style="color:var(--primary-accent); text-decoration:none" href="submission.html">Submission Page</a> · <a style="color:var(--primary-accent); text-decoration:none" href="https://github.com/katierock01/inf6420-projects" target="_blank" rel="noopener">GitHub</a></div>
+    <div style="margin-top:6px"><a style="color:var(--primary-accent); text-decoration:none" href="docs/index.html">Assignment Docs</a> · <a style="color:var(--primary-accent); text-decoration:none" href="submission.html">Submission Page</a></div>
   </footer>
 </body>
 </html>
