--- a/submission.html
+++ b/submission.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>INF 6420 – Submission</title>
-  <meta name="description" content="Submission overview with live URLs for INF 6420 projects by Katie Rock, including Project 2.2 and 2.1 DOCX link." />
-  <link rel="icon" href="favicon.svg" type="image/svg+xml" />
-  <link rel="stylesheet" href="styles/brand.css?v=et1" />
+  <meta name="description" content="Submission overview with live URLs for INF 6420 projects by Katie Rock, including Project 2.2 and 2.1 DOCX link.">
+  <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="styles/brand.css">
   <style>
     :root {
       --muted:#5a5a5a; --bg:#f7faf7; --card:#fff; --shadow:0 8px 20px rgba(0,0,0,.08);
@@ -38,7 +38,7 @@
 <body>
   <div class="topbar">
     <div style="display:flex; align-items:center; gap:10px;">
-  <img src="images/logo-icon.svg" alt="Katie Rock logo" style="height:28px; width:auto" />
+  <img src="images/logo-icon.svg" alt="Katie Rock logo" style="height:28px; width:auto">
   <span class="brand">Katie Rock, LLMSW</span>
     </div>
     <nav class="nav" aria-label="Primary">
@@ -63,11 +63,10 @@
     <section class="card">
       <h2>Projects</h2>
       <ul class="list">
-        <li><a href="project1.1/index.html">Project 1.1</a> (includes link to Project 2.1 DOCX)</li>
-  <li><a href="project2.1/rock-project2.1.docx">Project 2.1 (DOCX)</a> (primary submission)</li>
-  <li><a href="project2.2/index.html">Project 2.2</a> (final HTML version)</li>
-        <li><a href="rock-Project2.3/index.html">Project 2.3</a> (placeholder – coming soon)</li>
-        <li><a href="project3/home.html">Project 3</a> (Squirrels website)</li>
+        <li><a href="rock-Project1.1/rock-Project1.1.index.html">Project 1.1</a> (includes link to Project 2.1 DOCX)</li>
+        <li><a href="docs/project2.1.docx">Project 2.1 (DOCX)</a> (primary submission)</li>
+        <li><a href="rock-Project2.2/rock-project2-2.html">Project 2.2</a> (final HTML version)</li>
+        <li><a href="project3/home.html">Project 2.3</a> (placeholder – coming soon)</li>
       </ul>
     </section>
 
@@ -75,17 +74,17 @@
       <h2>Project 2.1 – Submission URL (HTTP)</h2>
       <p>Per rubric, submit the Project 1 page that links to the DOCX:</p>
       <p>
-        <strong><a href="http://141.217.120.86/fn9575/html/inf6420-projects/project1.1/index.html" target="_blank" rel="noopener">http://141.217.120.86/fn9575/html/inf6420-projects/project1.1/index.html</a></strong>
+        <strong><a href="http://141.217.120.86/fn9575/html/rock-Project1.1/rock-Project1.1.index.html" target="_blank" rel="noopener">http://141.217.120.86/fn9575/html/rock-Project1.1/rock-Project1.1.index.html</a></strong>
       </p>
       <p class="meta">Direct DOCX (optional):
-        <a href="http://141.217.120.86/fn9575/html/inf6420-projects/project2.1/rock-project2.1.docx" target="_blank" rel="noopener">rock-project2.1.docx</a>
+        <a href="http://141.217.120.86/fn9575/html/docs/project2.1.docx" target="_blank" rel="noopener">project2.1.docx</a>
       </p>
       <p class="meta">Note: Server is HTTP-only. If the browser flags the download as insecure, choose “Keep/Keep anyway.”</p>
     </section>
 
     <section class="card">
       <h2>Video Presentation</h2>
-      <iframe width="357" height="200" src="https://www.youtube.com/embed/uXbkobcG5JU" title="August 31, 2025" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.08);"></iframe>
+      <iframe width="357" height="200" src="https://www.youtube.com/embed/uXbkobcG5JU" title="August 31, 2025" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.08); border:0;"></iframe>
       <div style="margin-top:8px">
         <a href="https://www.youtube.com/watch?v=uXbkobcG5JU" target="_blank" rel="noopener">View on YouTube</a> (if embed fails)
       </div>
@@ -100,12 +99,12 @@
       <h2>Project 2.2 – Submission URL and Validators</h2>
       <p>Public URL:</p>
       <p>
-        <strong><a href="http://141.217.120.86/fn9575/html/inf6420-projects/project2.2/index.html" target="_blank" rel="noopener">http://141.217.120.86/fn9575/html/inf6420-projects/project2.2/index.html</a></strong>
+        <strong><a href="http://141.217.120.86/fn9575/html/rock-Project2.2/rock-project2-2.html" target="_blank" rel="noopener">http://141.217.120.86/fn9575/html/rock-Project2.2/rock-project2-2.html</a></strong>
       </p>
       <p class="meta">Validators:</p>
       <ul class="list" style="margin-top:6px">
-        <li><a href="https://validator.w3.org/nu/?doc=http%3A%2F%2F141.217.120.86%2Ffn9575%2Fhtml%2Finf6420-projects%2Fproject2.2%2Findex.html" target="_blank" rel="noopener">Validate HTML (W3C)</a></li>
-        <li><a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2F141.217.120.86%2Ffn9575%2Fhtml%2Finf6420-projects%2Fproject2.2%2Findex.html" target="_blank" rel="noopener">Validate CSS (W3C)</a></li>
+        <li><a href="https://validator.w3.org/nu/?doc=http%3A%2F%2F141.217.120.86%2Ffn9575%2Fhtml%2Frock-Project2.2%2Frock-project2-2.html" target="_blank" rel="noopener">Validate HTML (W3C)</a></li>
+        <li><a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2F141.217.120.86%2Ffn9575%2Fhtml%2Frock-Project2.2%2Frock-project2-2.html" target="_blank" rel="noopener">Validate CSS (W3C)</a></li>
       </ul>
     </section>
 
@@ -113,14 +112,9 @@
       <h2>Submission Tips</h2>
       <ol>
         <li>Open each link above to verify it loads locally.</li>
-        <li>Copy PDFs into <code>docs/</code> and any 2.2 artifacts into <code>project2.2/docs/</code>.</li>
-        <li>Zip the entire <code>INF6420-Projects</code> folder and submit the ZIP, OR publish via GitHub Pages if allowed.</li>
+        <li>Copy PDFs into <code>docs/</code> and any 2.2 artifacts into <code>rock-Project2.2/docs/</code>.</li>
+        <li>Zip the entire <code>INF6420-Projects</code> folder and submit the ZIP.</li>
       </ol>
-    </section>
-
-    <section class="card">
-      <h2>Repository</h2>
-      <p><a href="https://github.com/katierock01/inf6420-projects" target="_blank" rel="noopener">View source on GitHub</a></p>
     </section>
   </main>
 
