--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="styles/brand.css?v=et1">
   <style>
     :root {
-      /* EmpathTech palette for unified branding */
-      --primary-accent: #083B55;   /* headings, accents */
-      --link-color: #083B55;       /* link */
-      --link-hover: #FF6B63;       /* link hover */
+      /* WSU green palette */
+      --primary-accent: #115740;   /* WSU green - headings, accents */
+      --link-color: #115740;       /* link */
+      --link-hover: #1a6e52;       /* link hover */
       --bg: #E8F2F7;
       --card-bg: #ffffff;
       --text: #222;
@@ -28,13 +28,13 @@
       color: var(--text);
       /* Simpler, widely-supported background (no color-mix) */
       background:
-        radial-gradient(1000px 400px at -10% -20%, rgba(8, 59, 85, 0.08) 0%, transparent 60%),
-        radial-gradient(800px 300px at 110% -10%, rgba(8, 59, 85, 0.08) 0%, transparent 60%),
+        radial-gradient(1000px 400px at -10% -20%, rgba(17, 87, 64, 0.08) 0%, transparent 60%),
+        radial-gradient(800px 300px at 110% -10%, rgba(17, 87, 64, 0.08) 0%, transparent 60%),
         var(--bg);
     }
     header {
-      /* Solid + subtle gradient using EmpathTech shades */
-      background: linear-gradient(135deg, var(--primary-accent), #0D5A7F);
+      /* Solid + subtle gradient using WSU green shades */
+      background: linear-gradient(135deg, var(--primary-accent), #1a6e52);
       color: white;
       padding: 48px 20px 32px;
       text-align: center;
@@ -80,20 +80,20 @@
     /* Make each card's link a proper block to avoid overlapping click targets */
     .card > a { text-decoration: none; color: inherit; display: block; height: 100%; }
 
-  .card-header { background: rgba(8, 59, 85, 0.12); padding: 14px 16px; border-bottom: 1px solid rgba(8, 59, 85, 0.18); }
+  .card-header { background: rgba(17, 87, 64, 0.12); padding: 14px 16px; border-bottom: 1px solid rgba(17, 87, 64, 0.18); }
   .card-header h3 { margin: 0; font-size: 1.1rem; color: var(--primary-accent); }
     .card-body { padding: 14px 16px 18px; flex: 1; }
     .meta { color: var(--muted); font-size: 0.9rem; margin-top: 6px; }
 
     footer { text-align: center; color: var(--muted); font-size: 0.9rem; padding: 26px 16px 40px; }
-  .pill { display: inline-block; padding: 2px 10px; border-radius: 999px; background: rgba(8, 59, 85, 0.15); color: var(--primary-accent); font-weight: 600; font-size: 0.8rem; }
+  .pill { display: inline-block; padding: 2px 10px; border-radius: 999px; background: rgba(17, 87, 64, 0.15); color: var(--primary-accent); font-weight: 600; font-size: 0.8rem; }
 
     /* Ensure top bar uses WSU green instead of default navy from brand.css */
     .topbar { background: var(--primary-accent) !important; color: #fff; }
     .topbar .nav a { color: #fff; }
 
-    /* Override hero to EmpathTech colors and improve title contrast */
-    .hero { background: linear-gradient(135deg, var(--primary-accent), #0D5A7F) !important; color: #fff !important; }
+    /* Override hero to WSU green colors and improve title contrast */
+    .hero { background: linear-gradient(135deg, var(--primary-accent), #1a6e52) !important; color: #fff !important; }
     .hero h1 { color: #fff !important; text-shadow: 0 2px 6px rgba(0,0,0,.28); }
     .hero p { color: #f1fff7 !important; }
 
@@ -204,6 +204,18 @@
           <div class="card-body">
             <p>Interactive squirrels website with multi-page navigation, PHP form handler, and shared CSS.</p>
             <p class="meta">Source: project3/index.html</p>
+          </div>
+        </a>
+      </article>
+
+      <article class="card" role="listitem">
+        <a href="project4/home.html">
+          <div class="card-header">
+            <h3>Project 4</h3>
+          </div>
+          <div class="card-body">
+            <p>Responsive squirrels website with mobile-first design and CSS media queries.</p>
+            <p class="meta">Source: project4/home.html</p>
           </div>
         </a>
       </article>
