--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
 
     <div class="grid" role="list">
       <article class="card" role="listitem">
-        <a href="rock-Project1.1/rock-Project1.1.index.html">
+        <a href="rock-Project1/rock-Project1.index.html">
           <div class="card-header">
-            <h3>Project 1.1</h3>
+            <h3>Project 1</h3>
           </div>
           <div class="card-body">
             <p>Personal intro page with basic HTML/CSS skills.</p>
-            <p class="meta">Source: rock-Project1.1/rock-Project1.1.index.html</p>
+            <p class="meta">Source: rock-Project1/rock-Project1.index.html</p>
           </div>
         </a>
       </article>
@@ -185,13 +185,13 @@
       </article>
 
       <article class="card" role="listitem">
-        <a href="project2.2/rock-project2-2.html">
+        <a href="inf6420-projects/rock-Project2.2/rock-project2-2.html">
           <div class="card-header">
             <h3>Project 2.2</h3>
           </div>
           <div class="card-body">
             <p>Converted HTML page with internal CSS, tables, styled lists, and validation links.</p>
-            <p class="meta">Source: project2.2/rock-project2-2.html</p>
+            <p class="meta">Source: inf6420-projects/rock-Project2.2/rock-project2-2.html</p>
           </div>
         </a>
       </article>
