--- a/submission.html
+++ b/submission.html
@@ -10,11 +10,11 @@
   <style>
     :root {
       --muted:#5a5a5a; --bg:#E8F2F7; --card:#fff; --shadow:0 8px 20px rgba(0,0,0,.08);
-      /* EmpathTech colors to stay consistent across site */
-      --primary-accent: #083B55; --link-color: #083B55; --link-hover: #FF6B63;
+      /* WSU green colors */
+      --primary-accent: #115740; --link-color: #115740; --link-hover: #1a6e52;
     }
     body{margin:0;font-family:"Segoe UI",Tahoma,Geneva,Verdana,sans-serif;background:var(--bg);color:#222}
-    header{background:linear-gradient(135deg,var(--primary-accent), #0D5A7F);color:#fff;padding:36px 18px 24px;text-align:center}
+    header{background:linear-gradient(135deg,var(--primary-accent), #1a6e52);color:#fff;padding:36px 18px 24px;text-align:center}
     header h1{margin:0;font-size:1.8rem}
     header p{margin:8px 0 0;color:#e9ffef}
     .container{max-width:900px;margin:20px auto;padding:0 16px 40px}
@@ -63,7 +63,7 @@
     <section class="card">
       <h2>Projects</h2>
       <ul class="list">
-        <li><a href="rock-Project1.1/rock-Project1.1.index.html">Project 1.1</a> (includes link to Project 2.1 DOCX)</li>
+        <li><a href="rock-Project1/rock-Project1.index.html">Project 1</a> (includes link to Project 2.1 DOCX)</li>
   <li><a href="rock-Project2.1/rock-project2.1.docx">Project 2.1 (DOCX)</a> (primary submission)</li>
   <li><a href="project2.2/rock-project2-2.html">Project 2.2</a> (final HTML version)</li>
         <li><a href="project3/index.html">Project 3</a> (multi-page squirrels site with PHP demo)</li>
@@ -74,7 +74,7 @@
       <h2>Project 2.1 – Submission URL (HTTP)</h2>
       <p>Per rubric, submit the Project 1 page that links to the DOCX:</p>
       <p>
-        <strong><a href="http://141.217.120.86/fn9575/html/inf6420-projects/rock-Project1.1/rock-Project1.1.index.html" target="_blank" rel="noopener">http://141.217.120.86/fn9575/html/inf6420-projects/rock-Project1.1/rock-Project1.1.index.html</a></strong>
+        <strong><a href="http://141.217.120.86/fn9575/html/inf6420-projects/rock-Project1/rock-Project1.index.html" target="_blank" rel="noopener">http://141.217.120.86/fn9575/html/inf6420-projects/rock-Project1/rock-Project1.index.html</a></strong>
       </p>
       <p class="meta">Direct DOCX (optional):
         <a href="http://141.217.120.86/fn9575/html/inf6420-projects/rock-Project2.1/rock-project2.1.docx" target="_blank" rel="noopener">rock-project2.1.docx</a>
