Update index.html to WSU green branding and add Project 4

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </article>
 
       <article class="card" role="listitem">
-        <a href="inf6420-projects/rock-Project2.2/rock-project2-2.html">
+        <a href="rock-Project2.2/rock-project2-2.html">
           <div class="card-header">
             <h3>Project 2.2</h3>
           </div>
