Add placeholder squirrel images for Projects 3 & 4

--- a/INF6420-index.html
+++ b/INF6420-index.html
@@ -18,8 +18,8 @@ sftp fn9575@141.217.120.86
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <style>
     :root {
-      --primary-color: #083B55;
-      --accent-color: #FF6B63;
+      --primary-color: #115740;
+      --accent-color: #1a6e52;
       --background-color: #E8F2F7;
       --heading-font: 'Montserrat', Arial, sans-serif;
       --body-font: 'Open Sans', Arial, sans-serif;
@@ -299,7 +299,7 @@ sftp fn9575@141.217.120.86
         <article class="project-card" role="listitem">
           <h3>Project 1.1</h3>
           <p>Personal introduction page with basic HTML/CSS skills.</p>
-          <a href="rock-Project1.1/rock-Project1.1.index.html" class="project-link" aria-label="View Project 1.1 - Personal introduction page">View Project</a>
+          <a href="rock-Project1/rock-Project1.index.html" class="project-link" aria-label="View Project 1 - Personal introduction page">View Project</a>
         </article>
         
         <article class="project-card" role="listitem">
