--- a/rock-INF6420-index.html
+++ b/rock-INF6420-index.html
@@ -5,217 +5,135 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Katie Rock – INF 6420 Project 1</title>
     <style>
-        * { box-sizing: border-box; }
         body {
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 10.5px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background: #fff;
+            background: linear-gradient(135deg, #f0fdf4, #ffffff);
             color: #333;
-            line-height: 1.5;
-        }
-        .profile-photo {
-            display: block;
-            margin: 10px auto 8px auto;
-            border-radius: 50%; /* Oval/circular frame */
-            max-width: 100px;
-            width: 100px;
-            height: 100px;
-            object-fit: cover;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            border: 3px solid #083B55;
-            background: #fff;
-            padding: 3px;
-        }
-        main {
-            width: 94%;
-            max-width: 600px;
-            margin: 14px auto;
-            padding: 12px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.06);
-        }
-        h1, h2, h3 {
-            color: #083B55;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        h1 {
-            font-size: 1.1em;
-            margin-bottom: 0.15em;
-        }
-        h2 {
-            font-size: 0.95em;
-            margin-bottom: 0.15em;
-        }
-        h3 {
-            font-size: 0.9em;
-            margin-top: 0.6em;
-        }
-        p, label, input, select, textarea {
-            font-size: 1em;
+            line-height: 1.6;
         }
         header {
-            background: #083B55;
-            color: #ffffff;
-            padding: 10px;
+            background-color: #115740;
+            color: white;
             text-align: center;
+            padding: 30px 15px;
         }
-        header h1, header h2 {
-            color: #ffffff;
-            margin: 8px auto;
+        header h1 {
+            margin: 0;
+            font-size: 2em;
+        }
+        header h2 {
+            margin: 10px 0 0;
+            font-weight: normal;
+            font-size: 1.2em;
+        }
+        main {
             max-width: 800px;
+            margin: 40px auto;
+            padding: 25px;
+            background: #fff;
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0,0,0,0.1);
+        }
+        h3 {
+            color: #115740;
+            margin-top: 1.5em;
+        }
+        img {
+            display: block;
+            margin: 25px auto;
+            border-radius: 12px;
+            max-width: 250px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.15);
         }
         footer {
-            font-size: 0.8em;
-            color: #555;
-            background: #f8f9fa;
-            border-top: 1px solid #eee;
-            padding: 6px;
             text-align: center;
-        }
-        /* Form Styles */
-    .projects-section { background: #f8f9fa; padding: 10px; border-radius: 6px; margin-top: 14px; }
-        .projects-section h3 { margin-top: 0; }
-    .project-link { display: inline-block; background: #083B55; color: white; padding: 6px 10px; text-decoration: none; border-radius: 4px; margin: 6px 8px 6px 0; transition: background 0.3s; font-size: 0.9em; }
-        .project-link:hover { background: #0D5A7F; }
-    .feedback-form { background: #E8F2F7; padding: 10px; border-radius: 6px; margin-top: 14px; }
-    fieldset { border: 1px solid #083B55; border-radius: 6px; padding: 10px; margin: 10px 0; background: white; }
-    legend { color: #083B55; font-weight: bold; padding: 0 8px; font-size: 0.85em; }
-    label { display: block; margin: 6px 0 3px; font-weight: 500; font-size: 0.88em; }
-        input[type="text"], input[type="email"], select, textarea {
-            width: 100%;
-            padding: 5px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            margin-bottom: 8px;
-            box-sizing: border-box;
+            padding: 15px;
             font-size: 0.9em;
+            color: #555;
+            margin-top: 30px;
+            border-top: 1px solid #ddd;
         }
-        textarea {
-            min-height: 56px;
-            resize: vertical;
-        }
-        input[type="radio"], input[type="checkbox"] { margin-right: 4px; }
-        .radio-group, .checkbox-group { margin: 8px 0; }
-        input[type="submit"] { background: #FF6B63; color: white; padding: 5px 10px; border: none; border-radius: 4px; cursor: pointer; font-size: 0.9em; margin-top: 6px; }
-        input[type="submit"]:hover { background: #FF5048; }
-
-        /* Small-screen tweaks */
-        @media (max-width: 520px) {
-            .profile-photo { max-width: 90px; }
-            main { max-width: 92%; padding: 10px; }
-            header { padding: 8px; }
-        }
-        input[type="submit"]:hover { background: #FF5048; }
     </style>
 </head>
 <body>
     <header>
         <h1>INF 6420 – Project 1</h1>
-    <h2>Katie Rock, LLMSW</h2>
+        <h2>Katie Rock – Personal Introduction</h2>
     </header>
+    <nav aria-label="Breadcrumb" style="max-width:800px; margin: 12px auto 0; padding: 0 25px;">
+        <a href="../index.html" style="color:#115740; text-decoration:none;">&larr; Back to Projects</a>
+    </nav>
+
     <main>
-        <!-- Your image -->
-        <img src="myphoto.jpeg" alt="Photo of Katie Rock" class="profile-photo" onerror="this.src='https://via.placeholder.com/100x100?text=Photo'">
+        <!-- Image positioned at top as required -->
+        <img src="../rock-Project2.1/docs/myphoto.jpeg" alt="Photo of Katie Rock" onerror="this.src='https://via.placeholder.com/250x250?text=Photo+Not+Found'">
+
         <h3>About Me</h3>
-        <p>Hello! My name is <strong>Katie Rock</strong>, and I'm a graduate student in the <em>Information Sciences program at Wayne State University</em>. This page was built as part of Project 1 to demonstrate basic web publishing skills. Learn more about the program at the <a href="https://wayne.edu/sis" target="_blank" rel="noopener">School of Information Sciences</a>.</p>
+        <p>Hello! My name is <strong>Katie Rock</strong>, and I'm a graduate student in the 
+        <em>Information Sciences program at Wayne State University</em>.</p>
+
+        <h3>Purpose of Taking This Class</h3>
+        <p>I am taking INF 6420 to strengthen my web development skills and learn how to create accessible, 
+        professional websites. This course will help me build technical competencies essential for modern 
+        information professionals. For more information about the program, visit the 
+        <a href="https://wayne.edu/sis" target="_blank" rel="noopener" style="color:#115740; font-weight:600;">Wayne State University School of Information Sciences</a>.</p>
+
+        <h3>Course Projects</h3>
+        <ul style="line-height:2;">
+            <li><a href="../rock-Project2.1/rock-project2.1.docx" style="color:#115740;">Project 2.1 – Research Paper (DOCX)</a></li>
+            <li><a href="../inf6420-projects/rock-Project2.2/rock-project2-2.html" style="color:#115740;">Project 2.2 – HTML Conversion with Internal CSS</a></li>
+            <li><a href="../project3/home.html" style="color:#115740;">Project 3 – Multi-Page Interactive Website</a></li>
+            <li>Project 4 – (Coming soon)</li>
+            <li>Project 5 – Final Project (Coming soon)</li>
+        </ul>
+
+        <h3>Additional Information</h3>
+        <p>
+            <!-- Per Project 2.1 rubric: Project 1 must link to the Project 2.1 Word document -->
+            <a href="../rock-Project2.1/rock-project2.1.docx"
+               style="color:#115740; font-weight:600; text-decoration:none; border:1px solid #d0e4ed; padding:8px 10px; border-radius:8px; background:#E8F2F7; display:inline-block"
+               title="Download the updated Project 2.1 Word document">
+               Project 2.1 – Download (Updated DOCX)
+            </a>
+        </p>
+        <p>
+            <!-- Per Project 2.2 rubric: Project 1 must link to Project 2.2 HTML page -->
+            <a href="../inf6420-projects/rock-Project2.2/rock-project2-2.html"
+               style="color:#115740; font-weight:600; text-decoration:none; border:1px solid #d0e4ed; padding:8px 10px; border-radius:8px; background:#E8F2F7; display:inline-block"
+               title="View Project 2.2 HTML version with styled content">
+               Project 2.2 – HTML Version (Styled)
+            </a>
+        </p>
+        <p style="font-size:0.9em; color:#555; margin-top:-10px;">Last updated: October 23, 2025</p>
+
         <h3>Interests</h3>
-        <p>I'm passionate about combining <strong>information management, social impact, and technology</strong>. In particular, I explore how data and AI can be used to drive innovation, advocacy, and social change.</p>
-        
-        <!-- Self-Introduction Video -->
-        <div style="background: #E8F2F7; padding: 12px; border-radius: 6px; margin: 14px 0; text-align: center;">
-            <h3 style="margin-top: 0;">Introduction Video</h3>
-            <video controls width="100%" style="max-width: 480px; border-radius: 6px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-                <source src="intro-video.mp4" type="video/mp4">
-                <source src="intro-video.webm" type="video/webm">
-                Your browser does not support the video tag. Please use a modern browser to view this content.
-            </video>
-            <p style="font-size: 0.85em; color: #555; margin-top: 8px;">Watch my self-introduction video to learn more about me!</p>
-        </div>
-        
-        <!-- Projects Section -->
-        <div class="projects-section">
-            <h3>My Projects</h3>
-            <p>Explore my course projects:</p>
-            <a href="rock-project2.1.docx" class="project-link">Project 2.1 - AI & Web Accessibility Research</a>
-            <a href="project2.2/rock-project2-2.html" class="project-link">Project 2.2 - HTML/CSS Conversion</a>
-            <a href="project3/home.html" class="project-link">Project 3 - Squirrels Website</a>
-            <a href="project4/home.html" class="project-link">Project 4 - Responsive Design</a>
-            <a href="#" class="project-link">Project 5 - Final (Coming soon)</a>
-        </div>
-        <!-- Feedback Form -->
-        <div class="feedback-form">
-            <h3>Visitor Feedback</h3>
-            <p>Please share your feedback about this course page!</p>
-            <form action="project3/showform.php" method="post">
-                <fieldset>
-                    <legend>Personal Information</legend>
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                </fieldset>
-                <fieldset>
-                    <legend>Course Experience</legend>
-                    <label>How would you rate this course?</label>
-                    <div class="radio-group">
-                        <input type="radio" id="excellent" name="rating" value="Excellent" required>
-                        <label for="excellent" style="display: inline;">Excellent</label><br>
-                        <input type="radio" id="good" name="rating" value="Good">
-                        <label for="good" style="display: inline;">Good</label><br>
-                        <input type="radio" id="fair" name="rating" value="Fair">
-                        <label for="fair" style="display: inline;">Fair</label><br>
-                        <input type="radio" id="poor" name="rating" value="Poor">
-                        <label for="poor" style="display: inline;">Poor</label>
-                    </div>
-                    <label for="interest">What interests you most?</label>
-                    <select id="interest" name="interest" required>
-                        <option value="">-- Select an option --</option>
-                        <option value="Web Design">Web Design</option>
-                        <option value="Programming">Programming</option>
-                        <option value="Database">Database Management</option>
-                        <option value="Data Analysis">Data Analysis</option>
-                        <option value="Other">Other</option>
-                    </select>
-                </fieldset>
-                <fieldset>
-                    <legend>Topics of Interest</legend>
-                    <label>Which topics would you like to learn more about? (Check all that apply)</label>
-                    <div class="checkbox-group">
-                        <input type="checkbox" id="html" name="extras[]" value="HTML/CSS">
-                        <label for="html" style="display: inline;">HTML/CSS</label><br>
-                        <input type="checkbox" id="javascript" name="extras[]" value="JavaScript">
-                        <label for="javascript" style="display: inline;">JavaScript</label><br>
-                        <input type="checkbox" id="php" name="extras[]" value="PHP">
-                        <label for="php" style="display: inline;">PHP</label><br>
-                        <input type="checkbox" id="responsive" name="extras[]" value="Responsive Design">
-                        <label for="responsive" style="display: inline;">Responsive Design</label><br>
-                        <input type="checkbox" id="accessibility" name="extras[]" value="Web Accessibility">
-                        <label for="accessibility" style="display: inline;">Web Accessibility</label>
-                    </div>
-                </fieldset>
-                <fieldset>
-                    <legend>Additional Comments</legend>
-                    <label for="comments">Your comments or suggestions:</label>
-                    <textarea id="comments" name="comments" placeholder="Share your thoughts..."></textarea>
-                </fieldset>
-                <input type="submit" value="Submit Feedback">
-            </form>
-        </div>
+        <p>I'm passionate about combining <strong>information management, social impact, and technology</strong>. 
+        In particular, I explore how data and AI can be used to drive innovation, advocacy, and social change.</p>
+
+        <h3>Closing</h3>
+        <p>Thank you for visiting my page! This is just the beginning of my journey in building 
+        professional web skills and applying them in meaningful, real-world contexts.</p>
     </main>
+
     <footer>
-    <p>&copy; 2025 Katie Rock, LLMSW | Wayne State University</p>
-    <p>
-        <a href="#" onclick="validateHTML(); return false;" style="color: #FF6B63; text-decoration: none; font-weight: 600;">Validate HTML</a>
-    </p>
-    <script>
-    function validateHTML() {
-        var currentURL = encodeURIComponent(window.location.href);
-        window.open('https://validator.w3.org/nu/?doc=' + currentURL, '_blank', 'noopener');
-    }
-    </script>
+        <p>&copy; 2025 Katie Rock | Wayne State University</p>
+        <p style="margin-top:10px;">
+            <a href="https://validator.w3.org/nu/?doc=" id="validate-html" target="_blank" rel="noopener" 
+               style="color:#115740; text-decoration:none; font-weight:600;">Validate HTML5</a>
+        </p>
     </footer>
+
+    <script>
+        // Dynamic validator link
+        (function(){
+            try {
+                const url = window.location.href;
+                const html = document.getElementById('validate-html');
+                if (html) html.href = 'https://validator.w3.org/nu/?doc=' + encodeURIComponent(url);
+            } catch (e) { /* noop */ }
+        })();
+    </script>
 </body>
 </html>
