--- a/rock-Project1/rock-Project1.index.html
+++ b/rock-Project1/rock-Project1.index.html
@@ -14,7 +14,7 @@
             line-height: 1.6;
         }
         header {
-            background-color: #083B55;
+            background-color: #115740;
             color: white;
             text-align: center;
             padding: 30px 15px;
@@ -37,7 +37,7 @@
             box-shadow: 0 6px 12px rgba(0,0,0,0.1);
         }
         h3 {
-            color: #083B55;
+            color: #115740;
             margin-top: 1.5em;
         }
         img {
@@ -59,11 +59,11 @@
 </head>
 <body>
     <header>
-        <h1>INF 6420 – Project 1 + 2.1</h1>
-        <h2>Katie Rock – Submission includes Project 2.1 (download below)</h2>
+        <h1>INF 6420 – Project 1</h1>
+        <h2>Katie Rock – Personal Introduction</h2>
     </header>
     <nav aria-label="Breadcrumb" style="max-width:800px; margin: 12px auto 0; padding: 0 25px;">
-        <a href="../index.html" style="color:#083B55; text-decoration:none;">&larr; Back to Projects</a>
+        <a href="../index.html" style="color:#115740; text-decoration:none;">&larr; Back to Projects</a>
     </nav>
 
     <main>
@@ -78,13 +78,13 @@
         <p>I am taking INF 6420 to strengthen my web development skills and learn how to create accessible, 
         professional websites. This course will help me build technical competencies essential for modern 
         information professionals. For more information about the program, visit the 
-        <a href="https://wayne.edu/sis" target="_blank" rel="noopener" style="color:#083B55; font-weight:600;">Wayne State University School of Information Sciences</a>.</p>
+        <a href="https://wayne.edu/sis" target="_blank" rel="noopener" style="color:#115740; font-weight:600;">Wayne State University School of Information Sciences</a>.</p>
 
         <h3>Course Projects</h3>
         <ul style="line-height:2;">
-            <li><a href="../rock-Project2.1/rock-project2.1.docx" style="color:#083B55;">Project 2.1 – Research Paper (DOCX)</a></li>
-            <li><a href="../project2.2/rock-project2-2.html" style="color:#083B55;">Project 2.2 – HTML Conversion with Internal CSS</a></li>
-            <li><a href="../project3/home.html" style="color:#083B55;">Project 3 – Multi-Page Interactive Website</a></li>
+            <li><a href="../rock-Project2.1/rock-project2.1.docx" style="color:#115740;">Project 2.1 – Research Paper (DOCX)</a></li>
+            <li><a href="../inf6420-projects/rock-Project2.2/rock-project2-2.html" style="color:#115740;">Project 2.2 – HTML Conversion with Internal CSS</a></li>
+            <li><a href="../project3/home.html" style="color:#115740;">Project 3 – Multi-Page Interactive Website</a></li>
             <li>Project 4 – (Coming soon)</li>
             <li>Project 5 – Final Project (Coming soon)</li>
         </ul>
@@ -93,15 +93,15 @@
         <p>
             <!-- Per Project 2.1 rubric: Project 1 must link to the Project 2.1 Word document -->
             <a href="../rock-Project2.1/rock-project2.1.docx"
-               style="color:#083B55; font-weight:600; text-decoration:none; border:1px solid #d0e4ed; padding:8px 10px; border-radius:8px; background:#E8F2F7; display:inline-block"
+               style="color:#115740; font-weight:600; text-decoration:none; border:1px solid #d0e4ed; padding:8px 10px; border-radius:8px; background:#E8F2F7; display:inline-block"
                title="Download the updated Project 2.1 Word document">
                Project 2.1 – Download (Updated DOCX)
             </a>
         </p>
         <p>
             <!-- Per Project 2.2 rubric: Project 1 must link to Project 2.2 HTML page -->
-            <a href="../project2.2/rock-project2-2.html"
-               style="color:#083B55; font-weight:600; text-decoration:none; border:1px solid #d0e4ed; padding:8px 10px; border-radius:8px; background:#E8F2F7; display:inline-block"
+            <a href="../inf6420-projects/rock-Project2.2/rock-project2-2.html"
+               style="color:#115740; font-weight:600; text-decoration:none; border:1px solid #d0e4ed; padding:8px 10px; border-radius:8px; background:#E8F2F7; display:inline-block"
                title="View Project 2.2 HTML version with styled content">
                Project 2.2 – HTML Version (Styled)
             </a>
@@ -121,7 +121,7 @@
         <p>&copy; 2025 Katie Rock | Wayne State University</p>
         <p style="margin-top:10px;">
             <a href="https://validator.w3.org/nu/?doc=" id="validate-html" target="_blank" rel="noopener" 
-               style="color:#083B55; text-decoration:none; font-weight:600;">Validate HTML5</a>
+               style="color:#115740; text-decoration:none; font-weight:600;">Validate HTML5</a>
         </p>
     </footer>
 
