Clean repository structure
- Remove duplicate nested inf6420-projects/ folder (outdated)
- Remove backup files (INF6420-index.html.backup)
- Remove test files (test_connection.py, quick_upload.py)
- Remove old index variants (INF6420-index.html, rock-INF6420-index.html)
- Remove placeholder rock-Project3/ (replaced by project3/)
- Add README.md files to project3/ and project4/
- Consolidate to single clean project structure

Result: Clean, organized repository ready for professional course work.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
       <a href="INF6420-index.html">Course Home</a>
       <a href="docs/index.html">Docs</a>
       <a href="submission.html">Submission</a>
-      <a href="https://github.com/katierock01/inf6420-projects" target="_blank" rel="noopener">GitHub</a>
     </nav>
   </div>
 
@@ -225,7 +224,7 @@
   <footer>
     <span class="pill">INF 6420</span>
     <div style="margin-top:8px">&copy; 2025 Katie Rock</div>
-    <div style="margin-top:6px"><a style="color:var(--primary-accent); text-decoration:none" href="docs/index.html">Assignment Docs</a> · <a style="color:var(--primary-accent); text-decoration:none" href="submission.html">Submission Page</a> · <a style="color:var(--primary-accent); text-decoration:none" href="https://github.com/katierock01/inf6420-projects" target="_blank" rel="noopener">GitHub</a></div>
+    <div style="margin-top:6px"><a style="color:var(--primary-accent); text-decoration:none" href="docs/index.html">Assignment Docs</a> · <a style="color:var(--primary-accent); text-decoration:none" href="submission.html">Submission Page</a></div>
   </footer>
 </body>
 </html>
