--- a/submission.html
+++ b/submission.html
@@ -126,14 +126,10 @@
       <ol>
         <li>Open each link above to verify it loads locally.</li>
         <li>Copy PDFs into <code>docs/</code> and any 2.2 artifacts into <code>rock-Project2.2/docs/</code>.</li>
-        <li>Zip the entire <code>INF6420-Projects</code> folder and submit the ZIP, OR publish via GitHub Pages if allowed.</li>
+        <li>Zip the entire <code>INF6420-Projects</code> folder and submit the ZIP.</li>
       </ol>
     </section>
 
-    <section class="card">
-      <h2>Repository</h2>
-      <p><a href="https://github.com/katierock01/inf6420-projects" target="_blank" rel="noopener">View source on GitHub</a></p>
-    </section>
   </main>
 
   <script>
