Fix validator URLs and create rubric-correct upload script

--- a/submission.html
+++ b/submission.html
@@ -65,7 +65,7 @@
       <ul class="list">
         <li><a href="rock-Project1/rock-Project1.index.html">Project 1</a> (includes link to Project 2.1 DOCX)</li>
   <li><a href="rock-Project2.1/rock-project2.1.docx">Project 2.1 (DOCX)</a> (primary submission)</li>
-  <li><a href="project2.2/rock-project2-2.html">Project 2.2</a> (final HTML version)</li>
+  <li><a href="rock-Project2.2/rock-project2-2.html">Project 2.2</a> (final HTML version)</li>
         <li><a href="project3/index.html">Project 3</a> (multi-page squirrels site with PHP demo)</li>
       </ul>
     </section>
@@ -99,12 +99,12 @@
       <h2>Project 2.2 – Submission URL and Validators</h2>
       <p>Public URL:</p>
       <p>
-        <strong><a href="http://141.217.120.86/fn9575/html/inf6420-projects/project2.2/rock-project2-2.html" target="_blank" rel="noopener">http://141.217.120.86/fn9575/html/inf6420-projects/project2.2/rock-project2-2.html</a></strong>
+        <strong><a href="http://141.217.120.86/fn9575/html/inf6420-projects/rock-Project2.2/rock-project2-2.html" target="_blank" rel="noopener">http://141.217.120.86/fn9575/html/inf6420-projects/rock-Project2.2/rock-project2-2.html</a></strong>
       </p>
       <p class="meta">Validators:</p>
       <ul class="list" style="margin-top:6px">
-        <li><a href="https://validator.w3.org/nu/?doc=http%3A%2F%2F141.217.120.86%2Ffn9575%2Fhtml%2Finf6420-projects%2Fproject2.2%2Frock-project2-2.html" target="_blank" rel="noopener">Validate HTML (W3C)</a></li>
-        <li><a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2F141.217.120.86%2Ffn9575%2Fhtml%2Finf6420-projects%2Fproject2.2%2Frock-project2-2.html" target="_blank" rel="noopener">Validate CSS (W3C)</a></li>
+        <li><a href="https://validator.w3.org/nu/?doc=http%3A%2F%2F141.217.120.86%2Ffn9575%2Fhtml%2Finf6420-projects%2Frock-Project2.2%2Frock-project2-2.html" target="_blank" rel="noopener">Validate HTML (W3C)</a></li>
+        <li><a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2F141.217.120.86%2Ffn9575%2Fhtml%2Finf6420-projects%2Frock-Project2.2%2Frock-project2-2.html" target="_blank" rel="noopener">Validate CSS (W3C)</a></li>
       </ul>
     </section>
 
